[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"


[project]
name = "scenicplus"
authors = [
  { name = "Seppe De Winter", email = "seppe.dewinter@kuleuven.be" },
  { name = "Carmen Bravo", email = "carmen.bravogonzalezblas@kuleuven.be" },
]
description = "SCENIC+ is a python package to build gene regulatory networks (GRNs) using combined or separate single-cell gene expression (scRNA-seq) and single-cell chromatin accessibility (scATAC-seq) data."
readme = "README.md"
version = "1.0a2"
requires-python = ">=3.11,<3.12"
keywords = ["scATAC", "GRN inference", "eGRN inference"]
license = { file = "LICENCE.txt" }
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "License :: Other/Proprietary License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
  "importlib-metadata>=9.0.0",
  "importlib-resources>=7.1.0",
  "loomxpy",
  "pycistarget",
  "pycistopic",
  "pyscenic",
  "setuptools==80",
]

[tool.uv.sources]
pycistarget = { git = "https://github.com/aertslab/pycistarget" }
loomxpy = { git = "https://github.com/aertslab/LoomXpy", rev = "main" }
pyscenic = { git = "https://github.com/aertslab/pySCENIC", rev = "master" }
pycistopic = { git = "https://github.com/aertslab/pycisTopic" }

[tool.uv.workspace]
members = ["."]

[dependency-groups]
dev = ["mypy>=2.1.0", "ruff>=0.15.17"]
docs = [
  "sphinx-rtd-theme",
  "nbsphinx",
  "nbsphinx-link",
  "numpydoc",
  "sphinx-book-theme",
]
scenicplus = ["ipykernel>=7.3.0"]

[project.urls]
Homepage = "https://github.com/aertslab/scenicplus"
Documentation = "https://scenicplus.readthedocs.io"
Repository = "https://github.com/aertslab/scenicplus"
Changelog = "https://github.com/aertslab/scenicplus/releases"

[project.scripts]
scenicplus = "scenicplus.cli.scenicplus:main"

[tool.ruff]
target-version = "py38"
line-length = 88
fix = true

lint.select = [
  "E",   # pycodestyle
  "W",   # pycodestyle
  "F",   # Pyflakes
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "D",   # flake8-docstrings
  "I",   # isort
  "SIM", # flake8-simplify
  "TCH", # flake8-type-checking
  "TID", # flake8-tidy-imports
  "Q",   # flake8-quotes
  "UP",  # pyupgrade
  "PT",  # flake8-pytest-style
  "RUF", # Ruff-specific rules
]

lint.ignore = [
  # Line length regulated by black
  "E501",
  # pydocstyle: http://www.pydocstyle.org/en/stable/error_codes.html
  # numpy convention with a few additional lints
  "D107",
  "D203",
  "D212",
  "D401",
  "D402",
  "D415",
  "D416",
  # flake8-pytest-style:
  "PT011", # pytest.raises({exception}) is too broad, set the match parameter or use a more specific exception
  # flake8-simplify
  "SIM102", # Use a single `if` statement instead of nested `if` statements
  # ruff
  "RUF005", # unpack-instead-of-concatenating-to-collection-literal
  # pycodestyle
  # TODO: Remove errors below to further improve docstring linting
  # Ordered from most common to least common errors.
  "D105",
  "D100",
  "D103",
  "D102",
  "D104",
  "D101",
]

[tool.ruff.lint.pycodestyle]
max-doc-length = 88

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"
